k8s/github-runner/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: actions-runner-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: github-runner
