k8s/github-runner/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: actions-runner-controller-network-policy
  namespace: actions-runner-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: actions-runner-controller
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from: # Allow webhook calls from Kubernetes API server
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 9443
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to: # GitHub API + Kubernetes API server
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 6443
